deploy: 1dcd703d99989c33350e320fb1a9920c04c12955

--- a/index.html
+++ b/index.html
@@ -958,6 +958,55 @@ NotSerious
 </div>
 <div class="container filtr-projects">
 <div class=row id=project-card-holder>
+<div class="col-sm-12 col-md-6 col-lg-4 p-2 filtr-item" data-category="all, golang,scala,react,flink,kafka,kubernetes,elasticsearch">
+<div class="card mt-1">
+<div class=card>
+<a class=card-header href=https://github.com/ormissia/eve-situation-awareness target=_blank rel=noopener>
+<div>
+<div class=d-flex>
+<img class=card-img-xs src=/images/sections/projects/go_hue4d750b86639bc097ae544131de4926d_6734_24x24_fit_box_3.png alt=eve-situation-awareness>
+<h5 class="card-title mb-0">eve-situation-awareness</h5>
+</div>
+<div class=sub-title>
+<span>Owner</span>
+<span>Maybe 5 days</span>
+</div>
+</div>
+</a>
+<div class="card-body text-justify pt-1 pb-1">
+<p>对EVE Online游戏中产生的击杀记录数据进行汇总，建立一个游戏中星系、角色、公司、联盟的态势感知系统。</p>
+<div class=project-card-footer>
+<div class=project-tags-holder>
+<span class="badge btn-info">
+golang
+</span>
+<span class="badge btn-info">
+scala
+</span>
+<span class="badge btn-info">
+react
+</span>
+<span class="badge btn-info">
+flink
+</span>
+<span class="badge btn-info">
+kafka
+</span>
+<span class="badge btn-info">
+kubernetes
+</span>
+<span class="badge btn-info">
+elasticsearch
+</span>
+</div>
+<div class=project-btn-holder>
+<a class="github-button-inactive project-btn" href=https://github.com/ormissia/eve-situation-awareness data-icon=octicon-standard data-show-count=true aria-label="Star eve-situation-awareness">Star</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 <div class="col-sm-12 col-md-6 col-lg-4 p-2 filtr-item" data-category="all, golang,rabbitmq,api">
 <div class="card mt-1">
 <div class=card>
@@ -969,7 +1018,7 @@ NotSerious
 </div>
 <div class=sub-title>
 <span>Owner</span>
-<span>Maybe 5 days</span>
+<span>Dec 2020</span>
 </div>
 </div>
 </a>
@@ -1006,7 +1055,7 @@ api
 </div>
 <div class=sub-title>
 <span>Owner</span>
-<span>Dec 2020 - Present</span>
+<span>Dec 2020</span>
 </div>
 </div>
 </a>
@@ -1049,7 +1098,7 @@ ci-cd
 </div>
 <div class=sub-title>
 <span>Owner</span>
-<span>Sep 2020 - Present</span>
+<span>Sep 2020</span>
 </div>
 </div>
 </a>
