deploy: 7edd9b0c4d09333dc1d40da2d9be6bc569390367

--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@ NotSerious
 </div>
 </a>
 <div class="card-body text-justify pt-1 pb-1">
-<p>对EVE Online游戏中产生的击杀记录数据进行汇总，建立一个游戏中星系、角色、公司、联盟的态势感知系统。</p>
+<p>对<a href=https://www.eveonline.com/>EVE Online</a>游戏中产生的<a href=https://zkillboard.com/>击杀记录</a>数据进行汇总，建立一个游戏中星系、角色、公司、联盟的态势感知系统。数据处理部分使用<code>Flink</code>实时处理，Web端部分采用<code>Kubernetes</code>平台部署</p>
 <div class=project-card-footer>
 <div class=project-tags-holder>
 <span class="badge btn-info">
@@ -1060,7 +1060,7 @@ api
 </div>
 </a>
 <div class="card-body text-justify pt-1 pb-1">
-<p>我的博客后端<code>Go</code>语言版（之前时Java版，已不再维护），也是我第一个真正意义上的<code>Golang</code>项目。使用<code>Docker镜像</code> → <code>Jenkins</code>的部署方式</p>
+<p>（这垃圾玩意早不维护了）我的博客后端<code>Go</code>语言版（之前时Java版，已不再维护），也是我第一个真正意义上的<code>Golang</code>项目。使用<code>Docker镜像</code> → <code>Jenkins</code>的部署方式</p>
 <div class=project-card-footer>
 <div class=project-tags-holder>
 <span class="badge btn-info">
@@ -1103,7 +1103,7 @@ ci-cd
 </div>
 </a>
 <div class="card-body text-justify pt-1 pb-1">
-<p>我的博客前端项目，使用<code>VUE</code>开发，并且使用<code>Element UI</code>作为UI框架，通过这个项目，我理解到了前后端分离的概念，也学习了各种在工作中可能遇不到的问题。这个项目依然采用<code>Jenkins</code>自动打包成静态文件部署到<code>Nginx</code>服务器上。</p>
+<p>（这垃圾玩意早不维护了）我的博客前端项目，使用<code>VUE</code>开发，并且使用<code>Element UI</code>作为UI框架，通过这个项目，我理解到了前后端分离的概念，也学习了各种在工作中可能遇不到的问题。这个项目依然采用<code>Jenkins</code>自动打包成静态文件部署到<code>Nginx</code>服务器上。</p>
 <div class=project-card-footer>
 <div class=project-tags-holder>
 <span class="badge btn-info">
