deploy: 4ba4be9b35e24bfd72ec9e784563168f0491e53e

--- a/index.html
+++ b/index.html
@@ -49,19 +49,13 @@ Ormissia's Blog</a>
 <a class=nav-link href=#about>关于我</a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=#skills>技能</a>
-</li>
-<li class=nav-item>
 <a class=nav-link href=#recent-posts>最近</a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=#education>历程</a>
 </li>
-<li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href=# id=navbarDropdown role=button data-toggle=dropdown aria-haspopup=true aria-expanded=false>更多的</a>
-<div class=dropdown-menu aria-labelledby=navbarDropdown>
-<a class=dropdown-item href=#projects>项目</a>
-</div>
+<li class=nav-item>
+<a class=nav-link href=#projects>项目</a>
 </li>
 <div class=dropdown-divider id=top-navbar-divider></div>
 <li class=nav-item>
@@ -106,10 +100,10 @@ Ormissia's Blog</a>
 <div class=col-sm-6>
 <h3 class=p-1>Ormissia</h3>
 <h5 class=p-1>
-一个发际线好像还不是很危险的程序猿 🧓 → 👴
+后端开发
 </h5>
 <p class="p-1 text-justify">
-情丝截，不愿回忆伤心切，伤心切，心如蛇蝎心似碎屑。梦魇打出同心结，心中血泪不停泄，不停泄，酒池之外，枯风残月。
+主要从事后端开发，同时也熟悉一些数据处理的工作。
 </p>
 <div class="text-container ml-auto">
 <ul class="social-link d-flex">
@@ -132,62 +126,29 @@ Ormissia's Blog</a>
 <span class=circular-progress-right>
 <span class=circular-progress-bar></span>
 </span>
-<div class=circular-progress-value>Golang</div>
-</div>
-</div>
-<div class="col-6 col-lg-4 p-2">
-<div class="circular-progress yellow">
-<span class=circular-progress-left>
-<span class="circular-progress-bar circular-progress-percentage-80"></span>
-</span>
-<span class=circular-progress-right>
-<span class=circular-progress-bar></span>
-</span>
-<div class=circular-progress-value>Java</div>
+<div class=circular-progress-value>Learing</div>
 </div>
 </div>
 <div class="col-6 col-lg-4 p-2">
 <div class="circular-progress green">
 <span class=circular-progress-left>
-<span class="circular-progress-bar circular-progress-percentage-70"></span>
+<span class="circular-progress-bar circular-progress-percentage-85"></span>
 </span>
 <span class=circular-progress-right>
 <span class=circular-progress-bar></span>
 </span>
-<div class=circular-progress-value>Linux</div>
+<div class=circular-progress-value>Team Work</div>
 </div>
 </div>
 <div class="col-6 col-lg-4 p-2">
 <div class="circular-progress pink">
 <span class=circular-progress-left>
-<span class="circular-progress-bar circular-progress-percentage-80"></span>
+<span class="circular-progress-bar circular-progress-percentage-90"></span>
 </span>
 <span class=circular-progress-right>
 <span class=circular-progress-bar></span>
 </span>
-<div class=circular-progress-value>Microservice</div>
-</div>
-</div>
-<div class="col-6 col-lg-4 p-2">
-<div class="circular-progress blue">
-<span class=circular-progress-left>
-<span class="circular-progress-bar circular-progress-percentage-60"></span>
-</span>
-<span class=circular-progress-right>
-<span class=circular-progress-bar></span>
-</span>
-<div class=circular-progress-value>Algorithm</div>
-</div>
-</div>
-<div class="col-6 col-lg-4 p-2">
-<div class="circular-progress orange">
-<span class=circular-progress-left>
-<span class="circular-progress-bar circular-progress-percentage-80"></span>
-</span>
-<span class=circular-progress-right>
-<span class=circular-progress-bar></span>
-</span>
-<div class=circular-progress-value>CI/CD</div>
+<div class=circular-progress-value>Hard Working</div>
 </div>
 </div>
 </div>
