--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Ormissia's Blog</a>
 <a class=nav-link href=#home>主页</a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=#about>关于我</a>
+<a class=nav-link href=#about>技能</a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=#recent-posts>最近</a>
