deploy: b1aac901b877157c73ba2d5772184675bfd72304

--- a/index.html
+++ b/index.html
@@ -355,6 +355,23 @@ Ormissia's Blog</a>
 <div class=container>
 <div class=row id=recent-post-cards>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/posts/knowledge/2014-golang-atomic/ title=Golang中的原子操作 class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/posts/knowledge/2014-golang-atomic/head.svg alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>Golang中的原子操作</h5>
+<p class="card-text post-summary"> </p>
+</div>
+<div class=card-footer>
+<span class=float-left>February 22, 2022</span>
+<a href=/posts/knowledge/2014-golang-atomic/ title=阅读 class="float-right btn btn-outline-info btn-sm">阅读</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
 <a href=/posts/knowledge/2013-oauth/ title="OAuth 2.0扩展协议PKCE" class=post-card-link>
 <div class=card>
 <div class=card-head>
@@ -464,23 +481,6 @@ mysql.server restart 设置开机启动 cp /opt/homebrew/Cellar/mysql/8.0.27/hom
 <div class=card-footer>
 <span class=float-left>December 20, 2021</span>
 <a href=/posts/problems/5006-mysql-brew-conf/ title=阅读 class="float-right btn btn-outline-info btn-sm">阅读</a>
-</div>
-</div>
-</a>
-</div>
-<div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/knowledge/2010-kubernetes-index/ title=Kubernetes文档索引 class=post-card-link>
-<div class=card>
-<div class=card-head>
-<img class=card-img-top src=/posts/knowledge/2010-kubernetes-index/head.svg alt="Card image cap">
-</div>
-<div class=card-body>
-<h5 class=card-title>Kubernetes文档索引</h5>
-<p class="card-text post-summary"> 为系统守护进程预留计算资源 开启服务拓扑 Master节点的高可用 Service 的 DNS </p>
-</div>
-<div class=card-footer>
-<span class=float-left>November 4, 2021</span>
-<a href=/posts/knowledge/2010-kubernetes-index/ title=阅读 class="float-right btn btn-outline-info btn-sm">阅读</a>
 </div>
 </div>
 </a>
