deploy: 45954cd39b7d41be8f46de6214df7224020954e1

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=zh-cn>
 <head>
-<meta name=generator content="Hugo 0.86.0">
+<meta name=generator content="Hugo 0.92.2">
 <title>Ormissia's Blog</title>
 <meta name=description content="Ormissia's GitHub Pages Blog. 安红豆的 GitHub Pages 博客">
 <meta charset=utf-8>
@@ -362,7 +362,7 @@ Ormissia's Blog</a>
 </div>
 <div class=card-body>
 <h5 class=card-title>Golang中的原子操作</h5>
-<p class="card-text post-summary"> </p>
+<p class="card-text post-summary"> 参考链接 Golang五种原子性操作的用法详解 </p>
 </div>
 <div class=card-footer>
 <span class=float-left>February 22, 2022</span>
