--- a/notes/go/basic/basic/index.html
+++ b/notes/go/basic/basic/index.html
@@ -203,37 +203,37 @@ Ormissia's Blog</a>
 <h5 class=note-title><span>基础类型内存宽度以及表示范围</span></h5>
 <div class=card>
 <div class=card-body><p><code>bool</code></p>
-<pre><code>1Byte true/false
+<pre tabindex=0><code>1Byte true/false
 </code></pre><p><code>uint8</code></p>
-<pre><code>1Byte 0-255
+<pre tabindex=0><code>1Byte 0-255
 </code></pre><p><code>uint16</code></p>
-<pre><code>2Byte 0-65535
+<pre tabindex=0><code>2Byte 0-65535
 </code></pre><p><code>uint32</code></p>
-<pre><code>4Byte 0-4294967295
+<pre tabindex=0><code>4Byte 0-4294967295
 </code></pre><p><code>uint64</code></p>
-<pre><code>8Byte 0-18446744073709551615
+<pre tabindex=0><code>8Byte 0-18446744073709551615
 </code></pre><p><code>int8</code></p>
-<pre><code>1Byte -128-127
+<pre tabindex=0><code>1Byte -128-127
 </code></pre><p><code>int16</code></p>
-<pre><code>2Byte -32768-32767
+<pre tabindex=0><code>2Byte -32768-32767
 </code></pre><p><code>int32</code></p>
-<pre><code>4Byte -2147483648-2147483647
+<pre tabindex=0><code>4Byte -2147483648-2147483647
 </code></pre><p><code>int64</code></p>
-<pre><code>6Byte -9223372036854775808-9223372036854775807
+<pre tabindex=0><code>6Byte -9223372036854775808-9223372036854775807
 </code></pre><p><code>byte</code></p>
-<pre><code>1Byte 类似 uint8
+<pre tabindex=0><code>1Byte 类似 uint8
 </code></pre><p><code>rune</code></p>
-<pre><code>4Byte 类似 int32
+<pre tabindex=0><code>4Byte 类似 int32
 </code></pre><p><code>uint</code></p>
-<pre><code>4Byte / 8Byte 32 或 64 位
+<pre tabindex=0><code>4Byte / 8Byte 32 或 64 位
 </code></pre><p><code>int</code></p>
-<pre><code>4Byte / 8Byte 与 uint 一样大小
+<pre tabindex=0><code>4Byte / 8Byte 与 uint 一样大小
 </code></pre><p><code>float32</code></p>
-<pre><code>4Byte
+<pre tabindex=0><code>4Byte
 </code></pre><p><code>float64</code></p>
-<pre><code>8Byte
+<pre tabindex=0><code>8Byte
 </code></pre><p><code>string</code></p>
-<pre><code>1Byte （英文） / 2Byte-4Byte（中文，取决于字符编码类型）
+<pre tabindex=0><code>1Byte （英文） / 2Byte-4Byte（中文，取决于字符编码类型）
 </code></pre></div>
 </div>
 </div>
