--- a/notes/go/index.html
+++ b/notes/go/index.html
@@ -187,37 +187,37 @@ Ormissia's Blog</a>
 <h5 class=note-title><span>基础类型内存宽度以及表示范围</span></h5>
 <div class=card>
 <div class=card-body><p><code>bool</code></p>
-<pre><code>1Byte true/false
+<pre tabindex=0><code>1Byte true/false
 </code></pre><p><code>uint8</code></p>
-<pre><code>1Byte 0-255
+<pre tabindex=0><code>1Byte 0-255
 </code></pre><p><code>uint16</code></p>
-<pre><code>2Byte 0-65535
+<pre tabindex=0><code>2Byte 0-65535
 </code></pre><p><code>uint32</code></p>
-<pre><code>4Byte 0-4294967295
+<pre tabindex=0><code>4Byte 0-4294967295
 </code></pre><p><code>uint64</code></p>
-<pre><code>8Byte 0-18446744073709551615
+<pre tabindex=0><code>8Byte 0-18446744073709551615
 </code></pre><p><code>int8</code></p>
-<pre><code>1Byte -128-127
+<pre tabindex=0><code>1Byte -128-127
 </code></pre><p><code>int16</code></p>
-<pre><code>2Byte -32768-32767
+<pre tabindex=0><code>2Byte -32768-32767
 </code></pre><p><code>int32</code></p>
-<pre><code>4Byte -2147483648-2147483647
+<pre tabindex=0><code>4Byte -2147483648-2147483647
 </code></pre><p><code>int64</code></p>
-<pre><code>6Byte -9223372036854775808-9223372036854775807
+<pre tabindex=0><code>6Byte -9223372036854775808-9223372036854775807
 </code></pre><p><code>byte</code></p>
-<pre><code>1Byte 类似 uint8
+<pre tabindex=0><code>1Byte 类似 uint8
 </code></pre><p><code>rune</code></p>
-<pre><code>4Byte 类似 int32
+<pre tabindex=0><code>4Byte 类似 int32
 </code></pre><p><code>uint</code></p>
-<pre><code>4Byte / 8Byte 32 或 64 位
+<pre tabindex=0><code>4Byte / 8Byte 32 或 64 位
 </code></pre><p><code>int</code></p>
-<pre><code>4Byte / 8Byte 与 uint 一样大小
+<pre tabindex=0><code>4Byte / 8Byte 与 uint 一样大小
 </code></pre><p><code>float32</code></p>
-<pre><code>4Byte
+<pre tabindex=0><code>4Byte
 </code></pre><p><code>float64</code></p>
-<pre><code>8Byte
+<pre tabindex=0><code>8Byte
 </code></pre><p><code>string</code></p>
-<pre><code>1Byte （英文） / 2Byte-4Byte（中文，取决于字符编码类型）
+<pre tabindex=0><code>1Byte （英文） / 2Byte-4Byte（中文，取决于字符编码类型）
 </code></pre></div>
 </div>
 </div>
@@ -391,13 +391,13 @@ Ormissia's Blog</a>
 </ul>
 </li>
 </ul>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1100</span>
-<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1001</span>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0b1100</span>
+<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0b1001</span>
 <span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;%b&#34;</span>,<span style=color:#a6e22e>a</span>^<span style=color:#a6e22e>b</span>)
 <span style=color:#75715e>//101
 </span></code></pre></div><p>简单应用：不申请额外内存交换两个变量的值</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1100</span>
-<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1001</span>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0b1100</span>
+<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0b1001</span>
 
 <span style=color:#a6e22e>a</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span>
 <span style=color:#a6e22e>b</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span> <span style=color:#75715e>//b = (a ^ b) ^ b = a
