--- a/notes/index.html
+++ b/notes/index.html
@@ -187,37 +187,37 @@ Ormissia's Blog</a>
 <h5 class=note-title><span>基础类型内存宽度以及表示范围</span></h5>
 <div class=card>
 <div class=card-body><p><code>bool</code></p>
-<pre><code>1Byte true/false
+<pre tabindex=0><code>1Byte true/false
 </code></pre><p><code>uint8</code></p>
-<pre><code>1Byte 0-255
+<pre tabindex=0><code>1Byte 0-255
 </code></pre><p><code>uint16</code></p>
-<pre><code>2Byte 0-65535
+<pre tabindex=0><code>2Byte 0-65535
 </code></pre><p><code>uint32</code></p>
-<pre><code>4Byte 0-4294967295
+<pre tabindex=0><code>4Byte 0-4294967295
 </code></pre><p><code>uint64</code></p>
-<pre><code>8Byte 0-18446744073709551615
+<pre tabindex=0><code>8Byte 0-18446744073709551615
 </code></pre><p><code>int8</code></p>
-<pre><code>1Byte -128-127
+<pre tabindex=0><code>1Byte -128-127
 </code></pre><p><code>int16</code></p>
-<pre><code>2Byte -32768-32767
+<pre tabindex=0><code>2Byte -32768-32767
 </code></pre><p><code>int32</code></p>
-<pre><code>4Byte -2147483648-2147483647
+<pre tabindex=0><code>4Byte -2147483648-2147483647
 </code></pre><p><code>int64</code></p>
-<pre><code>6Byte -9223372036854775808-9223372036854775807
+<pre tabindex=0><code>6Byte -9223372036854775808-9223372036854775807
 </code></pre><p><code>byte</code></p>
-<pre><code>1Byte 类似 uint8
+<pre tabindex=0><code>1Byte 类似 uint8
 </code></pre><p><code>rune</code></p>
-<pre><code>4Byte 类似 int32
+<pre tabindex=0><code>4Byte 类似 int32
 </code></pre><p><code>uint</code></p>
-<pre><code>4Byte / 8Byte 32 或 64 位
+<pre tabindex=0><code>4Byte / 8Byte 32 或 64 位
 </code></pre><p><code>int</code></p>
-<pre><code>4Byte / 8Byte 与 uint 一样大小
+<pre tabindex=0><code>4Byte / 8Byte 与 uint 一样大小
 </code></pre><p><code>float32</code></p>
-<pre><code>4Byte
+<pre tabindex=0><code>4Byte
 </code></pre><p><code>float64</code></p>
-<pre><code>8Byte
+<pre tabindex=0><code>8Byte
 </code></pre><p><code>string</code></p>
-<pre><code>1Byte （英文） / 2Byte-4Byte（中文，取决于字符编码类型）
+<pre tabindex=0><code>1Byte （英文） / 2Byte-4Byte（中文，取决于字符编码类型）
 </code></pre></div>
 </div>
 </div>
@@ -391,13 +391,13 @@ Ormissia's Blog</a>
 </ul>
 </li>
 </ul>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1100</span>
-<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1001</span>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0b1100</span>
+<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0b1001</span>
 <span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;%b&#34;</span>,<span style=color:#a6e22e>a</span>^<span style=color:#a6e22e>b</span>)
 <span style=color:#75715e>//101
 </span></code></pre></div><p>简单应用：不申请额外内存交换两个变量的值</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1100</span>
-<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span><span style=color:#a6e22e>b1001</span>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0b1100</span>
+<span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0b1001</span>
 
 <span style=color:#a6e22e>a</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span>
 <span style=color:#a6e22e>b</span> = <span style=color:#a6e22e>a</span> ^ <span style=color:#a6e22e>b</span> <span style=color:#75715e>//b = (a ^ b) ^ b = a
@@ -475,7 +475,7 @@ Ormissia's Blog</a>
 <h5 class=note-title><span>函数</span></h5>
 <div class=card>
 <div class=card-body><p>函数参数为<code>val</code>类型，且可以给出默认值</p>
-<pre><code>def test(a: Int, b: Int = 1, c: Int = 2): Unit = {
+<pre tabindex=0><code>def test(a: Int, b: Int = 1, c: Int = 2): Unit = {
   println(s&quot;$a $b $c&quot;)
 }
   
@@ -490,7 +490,7 @@ test(1, c = 4)  //1 1 4
 <h5 class=note-title><span>匿名函数</span></h5>
 <div class=card>
 <div class=card-body><p>函数是带有参数的表达式。</p>
-<pre><code>(x: Int) =&gt; x + 1
+<pre tabindex=0><code>(x: Int) =&gt; x + 1
 </code></pre></div>
 </div>
 </div>
@@ -501,7 +501,7 @@ test(1, c = 4)  //1 1 4
 <div class=card>
 <div class=card-body><p>方法的表现和行为和函数非常类似，但是它们之间有一些关键的差别。</p>
 <p>方法由<code>def</code>关键字定义。<code>def</code>后面跟着一个名字、参数列表、返回类型和方法体。</p>
-<pre><code>def addThenMultiply(x: Int, y: Int)(multiplier: Int): Int = (x + y) * multiplier
+<pre tabindex=0><code>def addThenMultiply(x: Int, y: Int)(multiplier: Int): Int = (x + y) * multiplier
 println(addThenMultiply(1, 2)(3)) // 9
 </code></pre></div>
 </div>
@@ -511,7 +511,7 @@ println(addThenMultiply(1, 2)(3)) // 9
 <div class=item>
 <h5 class=note-title><span>字符串拼接</span></h5>
 <div class=card>
-<div class=card-body><pre><code>val a = 1
+<div class=card-body><pre tabindex=0><code>val a = 1
 val b = 2
 val c = s&quot;$a+$b=${a + b}&quot;
 </code></pre></div>
@@ -523,7 +523,7 @@ val c = s&quot;$a+$b=${a + b}&quot;
 <h5 class=note-title><span>对象</span></h5>
 <div class=card>
 <div class=card-body><p>约等于<code>static</code>单例对象</p>
-<pre><code>object TestObj {
+<pre tabindex=0><code>object TestObj {
   def main(args: Array[String]): Unit = {
     val a = 1
     val b = 2
@@ -545,7 +545,7 @@ val c = s&quot;$a+$b=${a + b}&quot;
 <li>类名构造器中的参数就是类的成员属性，默认是<code>val</code>类型，且是<code>private</code></li>
 <li>只有在类名构造器中的参数可以设置成<code>var</code>，其他方法函数中的参数都是<code>val</code>类型的，且不允许设置成<code>var</code>类型</li>
 </ul>
-<pre><code>class Greeter(prefix: String, var suffix: String) {
+<pre tabindex=0><code>class Greeter(prefix: String, var suffix: String) {
   var name = &quot;name&quot;
 
   def greet(name: String): Unit =
@@ -577,7 +577,7 @@ val c = s&quot;$a+$b=${a + b}&quot;
 <h5 class=note-title><span>偏应用函数</span></h5>
 <div class=card>
 <div class=card-body><p>类似于重新封装一下函数</p>
-<pre><code>def log(date: Date, logType: String, msg: String): Unit = {
+<pre tabindex=0><code>def log(date: Date, logType: String, msg: String): Unit = {
   println(s&quot;$date\t$logType\t$msg&quot;)
 }
 
@@ -591,7 +591,7 @@ info(new Date, &quot;this is a info msg&quot;)  //Thu Jul 22 23:14:04 CST 2021	i
 <div class=item>
 <h5 class=note-title><span>可变长度参数以及foreach</span></h5>
 <div class=card>
-<div class=card-body><pre><code>def foreachTest(a: Int*): Unit = {
+<div class=card-body><pre tabindex=0><code>def foreachTest(a: Int*): Unit = {
   //for (i &lt;- a) {
   //  print(i)
   //}
@@ -614,7 +614,7 @@ foreachTest(1, 2, 3, 4, 5)  //12345
 <h5 class=note-title><span>高阶函数</span></h5>
 <div class=card>
 <div class=card-body><p>函数作为参数</p>
-<pre><code>def computer(a: Int, b: Int, f: (Int, Int) =&gt; Int): Unit = {
+<pre tabindex=0><code>def computer(a: Int, b: Int, f: (Int, Int) =&gt; Int): Unit = {
   val res = f(a, b)
   println(res)
 }
@@ -625,7 +625,7 @@ computer(1, 2, _ + _)                       //3
 </div>
 <div class=card>
 <div class=card-body><p>函数作为返回值</p>
-<pre><code>def factory(i: String): (Int, Int) =&gt; Int = {
+<pre tabindex=0><code>def factory(i: String): (Int, Int) =&gt; Int = {
   def plus(x: Int, y: Int): Int = {
     x + y
   }
@@ -648,7 +648,7 @@ computer(1,2,plus)  //3
 <h5 class=note-title><span>柯里化</span></h5>
 <div class=card>
 <div class=card-body><p>多个参数列表</p>
-<pre><code>def testFunc(a:Int*)(b:Int*)(c:String*): Unit ={
+<pre tabindex=0><code>def testFunc(a:Int*)(b:Int*)(c:String*): Unit ={
   a.foreach(print)
   b.foreach(print)
   c.foreach(print)
@@ -666,7 +666,7 @@ testFunc(1,2,3)(2,3,4)(&quot;3&quot;,&quot;4&quot;,&quot;5&quot;) //123234345
 <div class=card-body><p>数组
 <code>scala</code>中泛型是<code>[]</code>，数组用<code>()</code></p>
 <p><code>val</code>约等于<code>final</code>，不可变描述的是<code>val</code>指定的引用（字面值、地址）</p>
-<pre><code>val arr1 = Array[Int](1, 2, 3)
+<pre tabindex=0><code>val arr1 = Array[Int](1, 2, 3)
 arr1(1) = 99
 println(arr1(1))  //99
 
@@ -675,7 +675,7 @@ println(arr1(1))  //99
 </div>
 <div class=card>
 <div class=card-body><p>遍历</p>
-<pre><code>
+<pre tabindex=0><code>
 for (elem &lt;- arr1) {}
 //foreach需要函数接收元素
 arr1.foreach(println)
@@ -688,7 +688,7 @@ arr1.foreach(println)
 <h5 class=note-title><span>链表</span></h5>
 <div class=card>
 <div class=card-body><p><code>scala</code>中<code>collections</code>中有两个包：<code>immutable,mutable</code>，默认是不可变的<code>immutable</code></p>
-<pre><code>val list1 = List(1, 2, 3, 4)
+<pre tabindex=0><code>val list1 = List(1, 2, 3, 4)
 
 //++ += ++: :++
 val list2 = new ListBuffer[Int]
@@ -698,7 +698,7 @@ list2.+=(3)
 </code></pre></div>
 </div>
 <div class=card>
-<div class=card-body><pre><code>val list1 = List(1, 2, 3, 4)
+<div class=card-body><pre tabindex=0><code>val list1 = List(1, 2, 3, 4)
 val list2 = list1.map(_ * 2)
 list2.foreach(print) //2468
 </code></pre></div>
@@ -711,12 +711,12 @@ list2.foreach(print) //2468
 <div class=card>
 <div class=card-body><p><code>Set</code></p>
 <p>不可变的</p>
-<pre><code>val set1 = Set(1, 2, 3, 4, 1, 2)  //1 2 3 4
+<pre tabindex=0><code>val set1 = Set(1, 2, 3, 4, 1, 2)  //1 2 3 4
 </code></pre></div>
 </div>
 <div class=card>
 <div class=card-body><p>可变的</p>
-<pre><code>val set2 = mutable.Set(1, 2, 3, 4, 1, 2)
+<pre tabindex=0><code>val set2 = mutable.Set(1, 2, 3, 4, 1, 2)
 set2.add(1)
 set2.add(5) //1 2 3 4 5
 </code></pre></div>
@@ -728,7 +728,7 @@ set2.add(5) //1 2 3 4 5
 <h5 class=note-title><span>Map</span></h5>
 <div class=card>
 <div class=card-body><p><code>Map</code></p>
-<pre><code>val map1 = Map((&quot;a&quot;, 1), &quot;b&quot; -&gt; 2, (&quot;c&quot;, 3), (&quot;a&quot;, 4))
+<pre tabindex=0><code>val map1 = Map((&quot;a&quot;, 1), &quot;b&quot; -&gt; 2, (&quot;c&quot;, 3), (&quot;a&quot;, 4))
 
 map1.foreach(print) //(a,4)(b,2)(c,3)
 println(map1.get(&quot;a&quot;)) //Some(4)
@@ -742,7 +742,7 @@ keys.foreach(println)
 </div>
 <div class=card>
 <div class=card-body><p>遍历</p>
-<pre><code>for (m &lt;- map1) {
+<pre tabindex=0><code>for (m &lt;- map1) {
   print(s&quot;$m&quot;)
 }
 for (k &lt;- keys) {
@@ -752,7 +752,7 @@ for (k &lt;- keys) {
 </div>
 <div class=card>
 <div class=card-body><p>可变的</p>
-<pre><code>val map2 = mutable.Map((&quot;a&quot;, 1), &quot;b&quot; -&gt; 2, (&quot;c&quot;, 3), (&quot;a&quot;, 4))
+<pre tabindex=0><code>val map2 = mutable.Map((&quot;a&quot;, 1), &quot;b&quot; -&gt; 2, (&quot;c&quot;, 3), (&quot;a&quot;, 4))
 map2.put(&quot;a&quot;, 5)
 </code></pre></div>
 </div>
@@ -902,23 +902,23 @@ a<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;ormissia&#34;<
 <h5 class=note-title><span>快捷键</span></h5>
 <div class=card>
 <div class=card-body><p>回到命令行开头&ndash;<code>Home</code></p>
-<pre><code>Ctrl+a
+<pre tabindex=0><code>Ctrl+a
 </code></pre><p>回到命令行的尾部&ndash;<code>End</code></p>
-<pre><code>Ctrl+e
+<pre tabindex=0><code>Ctrl+e
 </code></pre></div>
 </div>
 <div class=card>
 <div class=card-body><p>删除光标前边的所有字符</p>
-<pre><code>Ctrl+u
+<pre tabindex=0><code>Ctrl+u
 </code></pre><p>删除光标后边的所有字符</p>
-<pre><code>Ctrl+k
+<pre tabindex=0><code>Ctrl+k
 </code></pre><p>删除光标前的一个单词</p>
-<pre><code>Ctrl+w
+<pre tabindex=0><code>Ctrl+w
 </code></pre></div>
 </div>
 <div class=card>
 <div class=card-body><p>输入曾经的命令下的某个单词或字母，按照单词的匹配<code>history</code></p>
-<pre><code>Ctrl+r
+<pre tabindex=0><code>Ctrl+r
 </code></pre></div>
 </div>
 </div>
@@ -1082,13 +1082,13 @@ ln -s /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 <div class=paginator>
 <ul class="pagination pagination-default">
 <li class="page-item disabled">
-<a href=# aria-disabled=true aria-label=First class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;&#171;</span></a>
+<a aria-disabled=true aria-label=First class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;&#171;</span></a>
 </li>
 <li class="page-item disabled">
-<a href=# aria-disabled=true aria-label=Previous class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;</span></a>
+<a aria-disabled=true aria-label=Previous class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;</span></a>
 </li>
 <li class="page-item active">
-<a href=# aria-current=page aria-label="Page 1" class=page-link role=button>1</a>
+<a aria-current=page aria-label="Page 1" class=page-link role=button>1</a>
 </li>
 <li class=page-item>
 <a href=/notes/page/2/ aria-label="Page 2" class=page-link role=button>2</a>
