--- a/notes/linux/shell/basic/index.html
+++ b/notes/linux/shell/basic/index.html
@@ -200,23 +200,23 @@ Ormissia's Blog</a>
 <h5 class=note-title><span>快捷键</span></h5>
 <div class=card>
 <div class=card-body><p>回到命令行开头&ndash;<code>Home</code></p>
-<pre><code>Ctrl+a
+<pre tabindex=0><code>Ctrl+a
 </code></pre><p>回到命令行的尾部&ndash;<code>End</code></p>
-<pre><code>Ctrl+e
+<pre tabindex=0><code>Ctrl+e
 </code></pre></div>
 </div>
 <div class=card>
 <div class=card-body><p>删除光标前边的所有字符</p>
-<pre><code>Ctrl+u
+<pre tabindex=0><code>Ctrl+u
 </code></pre><p>删除光标后边的所有字符</p>
-<pre><code>Ctrl+k
+<pre tabindex=0><code>Ctrl+k
 </code></pre><p>删除光标前的一个单词</p>
-<pre><code>Ctrl+w
+<pre tabindex=0><code>Ctrl+w
 </code></pre></div>
 </div>
 <div class=card>
 <div class=card-body><p>输入曾经的命令下的某个单词或字母，按照单词的匹配<code>history</code></p>
-<pre><code>Ctrl+r
+<pre tabindex=0><code>Ctrl+r
 </code></pre></div>
 </div>
 </div>
